commit bilingual contents

--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.rangeformatloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.rangeformatloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.Interfaces.RangeFormatLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="eebb0-101">一个格式对象，其中封装了区域的字体、填充、边框、对齐方式和其他属性。</span><span class="sxs-lookup"><span data-stu-id="eebb0-101">A format object encapsulating the range's font, fill, borders, alignment, and other properties.</span></span>
+      一个格式对象，其中封装了区域的字体、填充、边框、对齐方式和其他属性。
 
-      <span data-ttu-id="eebb0-102">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="eebb0-102">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.Interfaces.RangeFormatLoadOptions
     fullName: Excel.Interfaces.RangeFormatLoadOptions
     langs:
@@ -30,7 +30,7 @@ items:
       - 'excel!Excel.Interfaces.RangeFormatLoadOptions#verticalAlignment:member'
       - 'excel!Excel.Interfaces.RangeFormatLoadOptions#wrapText:member'
   - uid: 'excel!Excel.Interfaces.RangeFormatLoadOptions#$all:member'
-    summary: '<span data-ttu-id="eebb0-103">为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`</span><span class="sxs-lookup"><span data-stu-id="eebb0-103">Specifying `$all` for the LoadOptions loads all the scalar properties (e.g.: `Range.address`</span></span><!-- --><span data-ttu-id="eebb0-104">），但不是导航属性（例如：`Range.format.fill.color`</span><span class="sxs-lookup"><span data-stu-id="eebb0-104">) but not the navigational properties (e.g.: `Range.format.fill.color`</span></span><!-- --><span data-ttu-id="eebb0-105">).</span><span class="sxs-lookup"><span data-stu-id="eebb0-105"></span></span>'
+    summary: 为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).
     name: $all
     fullName: $all
     langs:
@@ -43,9 +43,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeFormatLoadOptions#autoIndent:member'
     summary: |-
-      <span data-ttu-id="eebb0-106">指示将文本对齐方式设为相等分布时文本是否会自动缩进。</span><span class="sxs-lookup"><span data-stu-id="eebb0-106">Indicates if text is automatically indented when text alignment is set to equal distribution.</span></span>
+      指定当文本对齐方式设置为相等分布时，文本是否自动缩进。
 
-      <span data-ttu-id="eebb0-107">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="eebb0-107">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: autoIndent
     fullName: autoIndent
     langs:
@@ -58,9 +58,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeFormatLoadOptions#borders:member'
     summary: |-
-      <span data-ttu-id="eebb0-108">应用于整个区域的 Border 对象的集合。</span><span class="sxs-lookup"><span data-stu-id="eebb0-108">Collection of border objects that apply to the overall range.</span></span>
+      应用于整个区域的 Border 对象的集合。
 
-      <span data-ttu-id="eebb0-109">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="eebb0-109">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: borders
     fullName: borders
     langs:
@@ -73,9 +73,9 @@ items:
           - 'excel!Excel.Interfaces.RangeBorderCollectionLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.RangeFormatLoadOptions#columnWidth:member'
     summary: |-
-      <span data-ttu-id="eebb0-110">获取或设置区域内的所有列的宽度。</span><span class="sxs-lookup"><span data-stu-id="eebb0-110">Gets or sets the width of all colums within the range.</span></span> <span data-ttu-id="eebb0-111">如果列宽不统一，则返回 NULL。</span><span class="sxs-lookup"><span data-stu-id="eebb0-111">If the column widths are not uniform, null will be returned.</span></span>
+      指定区域中所有 colums 的宽度。 如果列宽不统一，则返回 NULL。
 
-      <span data-ttu-id="eebb0-112">\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="eebb0-112">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: columnWidth
     fullName: columnWidth
     langs:
@@ -88,9 +88,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeFormatLoadOptions#fill:member'
     summary: |-
-      <span data-ttu-id="eebb0-113">返回在整个区域内定义的 fill 对象。</span><span class="sxs-lookup"><span data-stu-id="eebb0-113">Returns the fill object defined on the overall range.</span></span>
+      返回在整个区域内定义的 fill 对象。
 
-      <span data-ttu-id="eebb0-114">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="eebb0-114">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: fill
     fullName: fill
     langs:
@@ -103,9 +103,9 @@ items:
           - 'excel!Excel.Interfaces.RangeFillLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.RangeFormatLoadOptions#font:member'
     summary: |-
-      <span data-ttu-id="eebb0-115">返回在整个区域内定义的 Font 对象。</span><span class="sxs-lookup"><span data-stu-id="eebb0-115">Returns the font object defined on the overall range.</span></span>
+      返回在整个区域内定义的 Font 对象。
 
-      <span data-ttu-id="eebb0-116">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="eebb0-116">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: font
     fullName: font
     langs:
@@ -118,9 +118,9 @@ items:
           - 'excel!Excel.Interfaces.RangeFontLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.RangeFormatLoadOptions#horizontalAlignment:member'
     summary: |-
-      <span data-ttu-id="eebb0-117">表示指定对象的水平对齐方式。</span><span class="sxs-lookup"><span data-stu-id="eebb0-117">Represents the horizontal alignment for the specified object.</span></span> <span data-ttu-id="eebb0-118">有关详细信息，请参阅 HorizontalAlignment。</span><span class="sxs-lookup"><span data-stu-id="eebb0-118">See Excel.HorizontalAlignment for details.</span></span>
+      表示指定对象的水平对齐方式。 有关详细信息，请参阅 HorizontalAlignment。
 
-      <span data-ttu-id="eebb0-119">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="eebb0-119">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: horizontalAlignment
     fullName: horizontalAlignment
     langs:
@@ -133,9 +133,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeFormatLoadOptions#indentLevel:member'
     summary: |-
-      <span data-ttu-id="eebb0-120">0 到 250 之间的一个整数，指示缩进水平。</span><span class="sxs-lookup"><span data-stu-id="eebb0-120">An integer from 0 to 250 that indicates the indent level.</span></span>
+      0 到 250 之间的一个整数，指示缩进水平。
 
-      <span data-ttu-id="eebb0-121">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="eebb0-121">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: indentLevel
     fullName: indentLevel
     langs:
@@ -148,9 +148,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeFormatLoadOptions#protection:member'
     summary: |-
-      <span data-ttu-id="eebb0-122">返回某一区域的格式 protection 对象。</span><span class="sxs-lookup"><span data-stu-id="eebb0-122">Returns the format protection object for a range.</span></span>
+      返回某一区域的格式 protection 对象。
 
-      <span data-ttu-id="eebb0-123">\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="eebb0-123">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: protection
     fullName: protection
     langs:
@@ -163,9 +163,9 @@ items:
           - 'excel!Excel.Interfaces.FormatProtectionLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.RangeFormatLoadOptions#readingOrder:member'
     summary: |-
-      <span data-ttu-id="eebb0-124">区域的读取顺序。</span><span class="sxs-lookup"><span data-stu-id="eebb0-124">The reading order for the range.</span></span>
+      区域的读取顺序。
 
-      <span data-ttu-id="eebb0-125">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="eebb0-125">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: readingOrder
     fullName: readingOrder
     langs:
@@ -178,9 +178,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeFormatLoadOptions#rowHeight:member'
     summary: |-
-      <span data-ttu-id="eebb0-126">获取或设置区域中所有行的高度。</span><span class="sxs-lookup"><span data-stu-id="eebb0-126">Gets or sets the height of all rows in the range.</span></span> <span data-ttu-id="eebb0-127">如果行高不一致，则将返回 null。</span><span class="sxs-lookup"><span data-stu-id="eebb0-127">If the row heights are not uniform, null will be returned.</span></span>
+      区域中所有行的高度。 如果行高不一致，则将返回 null。
 
-      <span data-ttu-id="eebb0-128">\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="eebb0-128">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: rowHeight
     fullName: rowHeight
     langs:
@@ -193,9 +193,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeFormatLoadOptions#shrinkToFit:member'
     summary: |-
-      <span data-ttu-id="eebb0-129">指示文本是否自动缩小以适合可用列宽。</span><span class="sxs-lookup"><span data-stu-id="eebb0-129">Indicates if text automatically shrinks to fit in the available column width.</span></span>
+      指定文本是否自动收缩以显示可用列宽。
 
-      <span data-ttu-id="eebb0-130">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="eebb0-130">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: shrinkToFit
     fullName: shrinkToFit
     langs:
@@ -208,9 +208,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeFormatLoadOptions#textOrientation:member'
     summary: |-
-      <span data-ttu-id="eebb0-131">获取或设置区域内的所有单元格的文本方向。</span><span class="sxs-lookup"><span data-stu-id="eebb0-131">Gets or sets the text orientation of all the cells within the range.</span></span> <span data-ttu-id="eebb0-132">文本方向应为-90 到90之间的整数，或者为180垂直方向的文本。</span><span class="sxs-lookup"><span data-stu-id="eebb0-132">The text orientation should be an integer either from -90 to 90, or 180 for vertically-oriented text.</span></span> <span data-ttu-id="eebb0-133">如果区域中的方向不一致，则将返回 null。</span><span class="sxs-lookup"><span data-stu-id="eebb0-133">If the orientation within a range are not uniform, then null will be returned.</span></span>
+      区域中所有单元格的文本方向。 文本方向应为-90 到90之间的整数，或者为180垂直方向的文本。 如果区域中的方向不一致，则将返回 null。
 
-      <span data-ttu-id="eebb0-134">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="eebb0-134">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: textOrientation
     fullName: textOrientation
     langs:
@@ -223,9 +223,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeFormatLoadOptions#useStandardHeight:member'
     summary: |-
-      <span data-ttu-id="eebb0-135">确定 Range 对象的行高是否等于工作表的标准行高。</span><span class="sxs-lookup"><span data-stu-id="eebb0-135">Determines if the row height of the Range object equals the standard height of the sheet.</span></span> <span data-ttu-id="eebb0-136">如果 Range 对象的行高等于工作表的标准高度，则返回 True。</span><span class="sxs-lookup"><span data-stu-id="eebb0-136">Returns True if the row height of the Range object equals the standard height of the sheet.</span></span> <span data-ttu-id="eebb0-137">如果区域包含多行，并且行不是都具有相同的高度，则返回 Null。</span><span class="sxs-lookup"><span data-stu-id="eebb0-137">Returns Null if the range contains more than one row and the rows aren't all the same height.</span></span> <span data-ttu-id="eebb0-138">否则返回 False。</span><span class="sxs-lookup"><span data-stu-id="eebb0-138">Returns False otherwise.</span></span>
+      确定 Range 对象的行高是否等于工作表的标准行高。 如果 Range 对象的行高等于工作表的标准高度，则返回 True。 如果区域包含多行，并且行不是都具有相同的高度，则返回 Null。 否则返回 False。
 
-      <span data-ttu-id="eebb0-139">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="eebb0-139">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: useStandardHeight
     fullName: useStandardHeight
     langs:
@@ -238,9 +238,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeFormatLoadOptions#useStandardWidth:member'
     summary: |-
-      <span data-ttu-id="eebb0-140">指示 Range 对象的列宽是否等于工作表的标准宽度。</span><span class="sxs-lookup"><span data-stu-id="eebb0-140">Indicates whether the column width of the Range object equals the standard width of the sheet.</span></span> <span data-ttu-id="eebb0-141">如果 Range 对象的列宽等于工作表的标准宽度，则返回 True。</span><span class="sxs-lookup"><span data-stu-id="eebb0-141">Returns True if the column width of the Range object equals the standard width of the sheet.</span></span> <span data-ttu-id="eebb0-142">如果区域中包含多个列，并且各列的高度不相同，则返回 Null。</span><span class="sxs-lookup"><span data-stu-id="eebb0-142">Returns Null if the range contains more than one column and the columns aren't all the same height.</span></span> <span data-ttu-id="eebb0-143">否则返回 False。</span><span class="sxs-lookup"><span data-stu-id="eebb0-143">Returns False otherwise.</span></span>
+      指定 Range 对象的列宽是否等于工作表的标准宽度。 如果 Range 对象的列宽等于工作表的标准宽度，则返回 True。 如果区域中包含多个列，并且各列的高度不相同，则返回 Null。 否则返回 False。
 
-      <span data-ttu-id="eebb0-144">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="eebb0-144">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: useStandardWidth
     fullName: useStandardWidth
     langs:
@@ -253,9 +253,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeFormatLoadOptions#verticalAlignment:member'
     summary: |-
-      <span data-ttu-id="eebb0-145">表示指定对象的垂直对齐方式。</span><span class="sxs-lookup"><span data-stu-id="eebb0-145">Represents the vertical alignment for the specified object.</span></span> <span data-ttu-id="eebb0-146">有关详细信息，请参阅 VerticalAlignment。</span><span class="sxs-lookup"><span data-stu-id="eebb0-146">See Excel.VerticalAlignment for details.</span></span>
+      表示指定对象的垂直对齐方式。 有关详细信息，请参阅 VerticalAlignment。
 
-      <span data-ttu-id="eebb0-147">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="eebb0-147">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: verticalAlignment
     fullName: verticalAlignment
     langs:
@@ -268,9 +268,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeFormatLoadOptions#wrapText:member'
     summary: |-
-      <span data-ttu-id="eebb0-148">指示 Excel 是否将对象中的文本换行。</span><span class="sxs-lookup"><span data-stu-id="eebb0-148">Indicates if Excel wraps the text in the object.</span></span> <span data-ttu-id="eebb0-149">指示整个区域不具有统一换行设置的空值</span><span class="sxs-lookup"><span data-stu-id="eebb0-149">A null value indicates that the entire range doesn't have uniform wrap setting</span></span>
+      指定 Excel 是否对对象中的文本进行换行。 指示整个区域不具有统一换行设置的空值
 
-      <span data-ttu-id="eebb0-150">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="eebb0-150">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: wrapText
     fullName: wrapText
     langs:
