--- a/docs/docs-ref-autogen/excel_1_2/excel/excel.worksheetcollection.yml
+++ b/docs/docs-ref-autogen/excel_1_2/excel/excel.worksheetcollection.yml
@@ -2,16 +2,16 @@
 items:
   - uid: 'excel!Excel.WorksheetCollection:class'
     summary: |-
-      <span data-ttu-id="b8a06-101">表示属于工作簿的 worksheet 对象的集合。</span><span class="sxs-lookup"><span data-stu-id="b8a06-101">Represents a collection of worksheet objects that are part of the workbook.</span></span>
+      表示属于工作簿的 worksheet 对象的集合。
 
-      <span data-ttu-id="b8a06-102">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b8a06-102">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.WorksheetCollection
     fullName: Excel.WorksheetCollection
     langs:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.WorksheetCollection#add:member(1)'
@@ -25,9 +25,9 @@ items:
       - 'excel!Excel.WorksheetCollection#toJSON:member(1)'
   - uid: 'excel!Excel.WorksheetCollection#add:member(1)'
     summary: |-
-      <span data-ttu-id="b8a06-p101">向工作簿添加新工作表。工作表将添加到现有工作表的末尾。如果您想要激活新添加的工作表，请对其调用 ".activate()。</span><span class="sxs-lookup"><span data-stu-id="b8a06-p101">Adds a new worksheet to the workbook. The worksheet will be added at the end of existing worksheets. If you wish to activate the newly added worksheet, call ".activate() on it.</span></span>
+      向工作簿添加新工作表。工作表将添加到现有工作表的末尾。如果您想要激活新添加的工作表，请对其调用 ".activate()。
 
-      <span data-ttu-id="b8a06-106">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b8a06-106">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: add(name)
     fullName: add(name)
     langs:
@@ -41,7 +41,7 @@ items:
         description: |-
 
 
-          #### <a name="examples"></a><span data-ttu-id="b8a06-107">示例</span><span class="sxs-lookup"><span data-stu-id="b8a06-107">Examples</span></span>
+          #### <a name="examples"></a>示例
 
           ```javascript
           Excel.run(function (ctx) { 
@@ -60,11 +60,11 @@ items:
           ```
       parameters:
         - id: name
-          description: '<span data-ttu-id="b8a06-p102">可选。要添加的工作表的名称。如果指定，名称应唯一。如果未指定，Excel 将确定新工作表的名称。</span><span class="sxs-lookup"><span data-stu-id="b8a06-p102">Optional. The name of the worksheet to be added. If specified, name should be unqiue. If not specified, Excel determines the name of the new worksheet.</span></span>'
+          description: 可选。要添加的工作表的名称。如果指定，名称应唯一。如果未指定，Excel 将确定新工作表的名称。
           type:
             - string
   - uid: 'excel!Excel.WorksheetCollection#context:member'
-    summary: <span data-ttu-id="b8a06-112">与该对象关联的请求上下文。</span><span class="sxs-lookup"><span data-stu-id="b8a06-112">The request context associated with the object.</span></span> <span data-ttu-id="b8a06-113">这会将加载项的进程连接到 Office 主机应用程序的进程。</span><span class="sxs-lookup"><span data-stu-id="b8a06-113">This connects the add-in's process to the Office host application's process.</span></span>
+    summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
     name: context
     fullName: context
     langs:
@@ -77,9 +77,9 @@ items:
           - 'excel!Excel.RequestContext:class'
   - uid: 'excel!Excel.WorksheetCollection#getActiveWorksheet:member(1)'
     summary: |-
-      <span data-ttu-id="b8a06-114">获取工作簿中当前处于活动状态的工作表。</span><span class="sxs-lookup"><span data-stu-id="b8a06-114">Gets the currently active worksheet in the workbook.</span></span>
+      获取工作簿中当前处于活动状态的工作表。
 
-      <span data-ttu-id="b8a06-115">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b8a06-115">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: getActiveWorksheet()
     fullName: getActiveWorksheet()
     langs:
@@ -93,7 +93,7 @@ items:
         description: |-
 
 
-          #### <a name="examples"></a><span data-ttu-id="b8a06-116">示例</span><span class="sxs-lookup"><span data-stu-id="b8a06-116">Examples</span></span>
+          #### <a name="examples"></a>示例
 
           ```javascript
           Excel.run(function (ctx) {  
@@ -111,9 +111,9 @@ items:
           ```
   - uid: 'excel!Excel.WorksheetCollection#getItem:member(1)'
     summary: |-
-      <span data-ttu-id="b8a06-117">按 Worksheet 对象的名称或 ID 获取此对象。</span><span class="sxs-lookup"><span data-stu-id="b8a06-117">Gets a worksheet object using its Name or ID.</span></span>
+      按 Worksheet 对象的名称或 ID 获取此对象。
 
-      <span data-ttu-id="b8a06-118">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b8a06-118">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: getItem(key)
     fullName: getItem(key)
     langs:
@@ -127,11 +127,11 @@ items:
         description: ''
       parameters:
         - id: key
-          description: <span data-ttu-id="b8a06-119">工作表的名称或 ID。</span><span class="sxs-lookup"><span data-stu-id="b8a06-119">The Name or ID of the worksheet.</span></span>
+          description: 工作表的名称或 ID。
           type:
             - string
   - uid: 'excel!Excel.WorksheetCollection#items:member'
-    summary: <span data-ttu-id="b8a06-120">获取此集合中已加载的子项。</span><span class="sxs-lookup"><span data-stu-id="b8a06-120">Gets the loaded child items in this collection.</span></span>
+    summary: 获取此集合中已加载的子项。
     name: items
     fullName: items
     langs:
@@ -143,7 +143,7 @@ items:
         type:
           - 'excel!Excel.WorksheetCollection#items~0:complex'
   - uid: 'excel!Excel.WorksheetCollection#load:member(1)'
-    summary: <span data-ttu-id="b8a06-121">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="b8a06-121">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="b8a06-122">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="b8a06-122">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(options)
     fullName: load(options)
     langs:
@@ -157,11 +157,11 @@ items:
         description: ''
       parameters:
         - id: options
-          description: <span data-ttu-id="b8a06-123">提供要加载的对象的属性的选项。</span><span class="sxs-lookup"><span data-stu-id="b8a06-123">Provides options for which properties of the object to load.</span></span>
+          description: 提供要加载的对象的属性的选项。
           type:
             - 'excel!Excel.WorksheetCollection#load~0:complex'
   - uid: 'excel!Excel.WorksheetCollection#load:member(2)'
-    summary: <span data-ttu-id="b8a06-124">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="b8a06-124">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="b8a06-125">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="b8a06-125">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -175,7 +175,7 @@ items:
         description: |-
 
 
-          #### <a name="examples"></a><span data-ttu-id="b8a06-126">示例</span><span class="sxs-lookup"><span data-stu-id="b8a06-126">Examples</span></span>
+          #### <a name="examples"></a>示例
 
           ```javascript
           Excel.run(function (ctx) { 
@@ -197,11 +197,11 @@ items:
           ```
       parameters:
         - id: propertyNames
-          description: <span data-ttu-id="b8a06-127">一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="b8a06-127">A comma-delimited string or an array of strings that specify the properties to load.</span></span>
+          description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
           type:
             - 'string | string[]'
   - uid: 'excel!Excel.WorksheetCollection#load:member(3)'
-    summary: <span data-ttu-id="b8a06-128">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="b8a06-128">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="b8a06-129">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="b8a06-129">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNamesAndPaths)
     fullName: load(propertyNamesAndPaths)
     langs:
@@ -215,11 +215,11 @@ items:
         description: ''
       parameters:
         - id: propertyNamesAndPaths
-          description: '<span data-ttu-id="b8a06-130">`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="b8a06-130">`propertyNamesAndPaths.select` is a comma-delimited string that specifies the properties to load, and `propertyNamesAndPaths.expand` is a comma-delimited string that specifies the navigation properties to load.</span></span>'
+          description: '`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。'
           type:
-            - 'excel!OfficeExtension.LoadOption:interface'
+            - 'office!OfficeExtension.LoadOption:interface'
   - uid: 'excel!Excel.WorksheetCollection#toJSON:member(1)'
-    summary: '<span data-ttu-id="b8a06-131">重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`</span><span class="sxs-lookup"><span data-stu-id="b8a06-131">Overrides the JavaScript `toJSON()` method in order to provide more useful output when an API object is passed to `JSON.stringify()`</span></span><!-- --><span data-ttu-id="b8a06-132">.</span><span class="sxs-lookup"><span data-stu-id="b8a06-132"></span></span> <span data-ttu-id="b8a06-133">(`JSON.stringify`</span><span class="sxs-lookup"><span data-stu-id="b8a06-133"></span></span><!-- --><span data-ttu-id="b8a06-134">反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始`Excel.WorksheetCollection`对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.WorksheetCollectionData`</span><span class="sxs-lookup"><span data-stu-id="b8a06-134">, in turn, calls the `toJSON` method of the object that is passed to it.) Whereas the original `Excel.WorksheetCollection` object is an API object, the `toJSON` method returns a plain JavaScript object (typed as `Excel.Interfaces.WorksheetCollectionData`</span></span><!-- --><span data-ttu-id="b8a06-135">），其中包含集合的项中所有加载属性的浅表副本的 "items" 数组。</span><span class="sxs-lookup"><span data-stu-id="b8a06-135">) that contains an "items" array with shallow copies of any loaded properties from the collection''s items.</span></span>'
+    summary: 重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始`Excel.WorksheetCollection`对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.WorksheetCollectionData`<!-- -->），其中包含集合的项中所有加载属性的浅表副本的 "items" 数组。
     name: toJSON()
     fullName: toJSON()
     langs:
@@ -232,7 +232,7 @@ items:
           - 'excel!Excel.Interfaces.WorksheetCollectionData:interface'
         description: ''
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.Worksheet:class'
     name: Excel.Worksheet
@@ -261,7 +261,7 @@ references:
       - uid: 'excel!Excel.Interfaces.CollectionLoadOptions:interface'
         name: Excel.Interfaces.CollectionLoadOptions
         fullName: Excel.Interfaces.CollectionLoadOptions
-  - uid: 'excel!OfficeExtension.LoadOption:interface'
+  - uid: 'office!OfficeExtension.LoadOption:interface'
     name: OfficeExtension.LoadOption
   - uid: 'excel!Excel.Interfaces.WorksheetCollectionData:interface'
     name: Excel.Interfaces.WorksheetCollectionData
