--- a/docs/docs-ref-autogen/excel_1_3/excel/excel.rangeviewcollection.yml
+++ b/docs/docs-ref-autogen/excel_1_3/excel/excel.rangeviewcollection.yml
@@ -2,16 +2,16 @@
 items:
   - uid: 'excel!Excel.RangeViewCollection:class'
     summary: |-
-      <span data-ttu-id="3186b-101">表示一组 RangeView 对象。</span><span class="sxs-lookup"><span data-stu-id="3186b-101">Represents a collection of RangeView objects.</span></span>
+      表示一组 RangeView 对象。
 
-      <span data-ttu-id="3186b-102">\[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3186b-102">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.RangeViewCollection
     fullName: Excel.RangeViewCollection
     langs:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.RangeViewCollection#context:member'
@@ -22,7 +22,7 @@ items:
       - 'excel!Excel.RangeViewCollection#load:member(3)'
       - 'excel!Excel.RangeViewCollection#toJSON:member(1)'
   - uid: 'excel!Excel.RangeViewCollection#context:member'
-    summary: <span data-ttu-id="3186b-103">与该对象关联的请求上下文。</span><span class="sxs-lookup"><span data-stu-id="3186b-103">The request context associated with the object.</span></span> <span data-ttu-id="3186b-104">这会将加载项的进程连接到 Office 主机应用程序的进程。</span><span class="sxs-lookup"><span data-stu-id="3186b-104">This connects the add-in's process to the Office host application's process.</span></span>
+    summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
     name: context
     fullName: context
     langs:
@@ -35,9 +35,9 @@ items:
           - 'excel!Excel.RequestContext:class'
   - uid: 'excel!Excel.RangeViewCollection#getItemAt:member(1)'
     summary: |-
-      <span data-ttu-id="3186b-105">通过其索引获取 RangeView 行。</span><span class="sxs-lookup"><span data-stu-id="3186b-105">Gets a RangeView Row via its index.</span></span> <span data-ttu-id="3186b-106">从零开始编制索引。</span><span class="sxs-lookup"><span data-stu-id="3186b-106">Zero-Indexed.</span></span>
+      通过其索引获取 RangeView 行。 从零开始编制索引。
 
-      <span data-ttu-id="3186b-107">\[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3186b-107">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: getItemAt(index)
     fullName: getItemAt(index)
     langs:
@@ -51,11 +51,11 @@ items:
         description: ''
       parameters:
         - id: index
-          description: <span data-ttu-id="3186b-108">可见行的索引。</span><span class="sxs-lookup"><span data-stu-id="3186b-108">Index of the visible row.</span></span>
+          description: 可见行的索引。
           type:
             - number
   - uid: 'excel!Excel.RangeViewCollection#items:member'
-    summary: <span data-ttu-id="3186b-109">获取此集合中已加载的子项。</span><span class="sxs-lookup"><span data-stu-id="3186b-109">Gets the loaded child items in this collection.</span></span>
+    summary: 获取此集合中已加载的子项。
     name: items
     fullName: items
     langs:
@@ -67,7 +67,7 @@ items:
         type:
           - 'excel!Excel.RangeViewCollection#items~0:complex'
   - uid: 'excel!Excel.RangeViewCollection#load:member(1)'
-    summary: <span data-ttu-id="3186b-110">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="3186b-110">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="3186b-111">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="3186b-111">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(options)
     fullName: load(options)
     langs:
@@ -81,11 +81,11 @@ items:
         description: ''
       parameters:
         - id: options
-          description: <span data-ttu-id="3186b-112">提供要加载的对象的属性的选项。</span><span class="sxs-lookup"><span data-stu-id="3186b-112">Provides options for which properties of the object to load.</span></span>
+          description: 提供要加载的对象的属性的选项。
           type:
             - 'excel!Excel.RangeViewCollection#load~0:complex'
   - uid: 'excel!Excel.RangeViewCollection#load:member(2)'
-    summary: <span data-ttu-id="3186b-113">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="3186b-113">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="3186b-114">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="3186b-114">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -99,11 +99,11 @@ items:
         description: ''
       parameters:
         - id: propertyNames
-          description: <span data-ttu-id="3186b-115">一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="3186b-115">A comma-delimited string or an array of strings that specify the properties to load.</span></span>
+          description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
           type:
             - 'string | string[]'
   - uid: 'excel!Excel.RangeViewCollection#load:member(3)'
-    summary: <span data-ttu-id="3186b-116">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="3186b-116">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="3186b-117">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="3186b-117">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNamesAndPaths)
     fullName: load(propertyNamesAndPaths)
     langs:
@@ -117,11 +117,11 @@ items:
         description: ''
       parameters:
         - id: propertyNamesAndPaths
-          description: '<span data-ttu-id="3186b-118">`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="3186b-118">`propertyNamesAndPaths.select` is a comma-delimited string that specifies the properties to load, and `propertyNamesAndPaths.expand` is a comma-delimited string that specifies the navigation properties to load.</span></span>'
+          description: '`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。'
           type:
-            - 'excel!OfficeExtension.LoadOption:interface'
+            - 'office!OfficeExtension.LoadOption:interface'
   - uid: 'excel!Excel.RangeViewCollection#toJSON:member(1)'
-    summary: '<span data-ttu-id="3186b-119">重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`</span><span class="sxs-lookup"><span data-stu-id="3186b-119">Overrides the JavaScript `toJSON()` method in order to provide more useful output when an API object is passed to `JSON.stringify()`</span></span><!-- --><span data-ttu-id="3186b-120">.</span><span class="sxs-lookup"><span data-stu-id="3186b-120"></span></span> <span data-ttu-id="3186b-121">(`JSON.stringify`</span><span class="sxs-lookup"><span data-stu-id="3186b-121"></span></span><!-- --><span data-ttu-id="3186b-122">反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始`Excel.RangeViewCollection`对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.RangeViewCollectionData`</span><span class="sxs-lookup"><span data-stu-id="3186b-122">, in turn, calls the `toJSON` method of the object that is passed to it.) Whereas the original `Excel.RangeViewCollection` object is an API object, the `toJSON` method returns a plain JavaScript object (typed as `Excel.Interfaces.RangeViewCollectionData`</span></span><!-- --><span data-ttu-id="3186b-123">），其中包含集合的项中所有加载属性的浅表副本的 "items" 数组。</span><span class="sxs-lookup"><span data-stu-id="3186b-123">) that contains an "items" array with shallow copies of any loaded properties from the collection''s items.</span></span>'
+    summary: 重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始`Excel.RangeViewCollection`对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.RangeViewCollectionData`<!-- -->），其中包含集合的项中所有加载属性的浅表副本的 "items" 数组。
     name: toJSON()
     fullName: toJSON()
     langs:
@@ -134,7 +134,7 @@ items:
           - 'excel!Excel.Interfaces.RangeViewCollectionData:interface'
         description: ''
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.RequestContext:class'
     name: RequestContext
@@ -163,7 +163,7 @@ references:
       - uid: 'excel!Excel.Interfaces.CollectionLoadOptions:interface'
         name: Excel.Interfaces.CollectionLoadOptions
         fullName: Excel.Interfaces.CollectionLoadOptions
-  - uid: 'excel!OfficeExtension.LoadOption:interface'
+  - uid: 'office!OfficeExtension.LoadOption:interface'
     name: OfficeExtension.LoadOption
   - uid: 'excel!Excel.Interfaces.RangeViewCollectionData:interface'
     name: Excel.Interfaces.RangeViewCollectionData
