--- a/docs/docs-ref-autogen/excel_1_8/excel/excel.conditionalrangebordercollection.yml
+++ b/docs/docs-ref-autogen/excel_1_8/excel/excel.conditionalrangebordercollection.yml
@@ -2,16 +2,16 @@
 items:
   - uid: 'excel!Excel.ConditionalRangeBorderCollection:class'
     summary: |-
-      <span data-ttu-id="3f3b6-101">表示构成区域边框的 border 对象。</span><span class="sxs-lookup"><span data-stu-id="3f3b6-101">Represents the border objects that make up range border.</span></span>
+      表示构成区域边框的 border 对象。
 
-      <span data-ttu-id="3f3b6-102">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3f3b6-102">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.ConditionalRangeBorderCollection
     fullName: Excel.ConditionalRangeBorderCollection
     langs:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.ConditionalRangeBorderCollection#bottom:member'
@@ -30,9 +30,9 @@ items:
       - 'excel!Excel.ConditionalRangeBorderCollection#top:member'
   - uid: 'excel!Excel.ConditionalRangeBorderCollection#bottom:member'
     summary: |-
-      <span data-ttu-id="3f3b6-103">获取下边框。</span><span class="sxs-lookup"><span data-stu-id="3f3b6-103">Gets the bottom border.</span></span> <span data-ttu-id="3f3b6-104">只读。</span><span class="sxs-lookup"><span data-stu-id="3f3b6-104">Read-only.</span></span>
+      获取下边框。
 
-      <span data-ttu-id="3f3b6-105">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3f3b6-105">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: bottom
     fullName: bottom
     langs:
@@ -44,7 +44,7 @@ items:
         type:
           - 'excel!Excel.ConditionalRangeBorder:class'
   - uid: 'excel!Excel.ConditionalRangeBorderCollection#context:member'
-    summary: <span data-ttu-id="3f3b6-106">与该对象关联的请求上下文。</span><span class="sxs-lookup"><span data-stu-id="3f3b6-106">The request context associated with the object.</span></span> <span data-ttu-id="3f3b6-107">这会将加载项的进程连接到 Office 主机应用程序的进程。</span><span class="sxs-lookup"><span data-stu-id="3f3b6-107">This connects the add-in's process to the Office host application's process.</span></span>
+    summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
     name: context
     fullName: context
     langs:
@@ -57,9 +57,9 @@ items:
           - 'excel!Excel.RequestContext:class'
   - uid: 'excel!Excel.ConditionalRangeBorderCollection#count:member'
     summary: |-
-      <span data-ttu-id="3f3b6-108">集合中的 border 对象数量。</span><span class="sxs-lookup"><span data-stu-id="3f3b6-108">Number of border objects in the collection.</span></span> <span data-ttu-id="3f3b6-109">只读。</span><span class="sxs-lookup"><span data-stu-id="3f3b6-109">Read-only.</span></span>
+      集合中的 border 对象数量。
 
-      <span data-ttu-id="3f3b6-110">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3f3b6-110">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: count
     fullName: count
     langs:
@@ -72,9 +72,9 @@ items:
           - number
   - uid: 'excel!Excel.ConditionalRangeBorderCollection#getItem:member(1)'
     summary: |-
-      <span data-ttu-id="3f3b6-111">使用其名称获取 border 对象</span><span class="sxs-lookup"><span data-stu-id="3f3b6-111">Gets a border object using its name.</span></span>
+      使用其名称获取 border 对象
 
-      <span data-ttu-id="3f3b6-112">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3f3b6-112">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: getItem(index)
     fullName: getItem(index)
     langs:
@@ -88,14 +88,14 @@ items:
         description: ''
       parameters:
         - id: index
-          description: <span data-ttu-id="3f3b6-113">要检索的 border 对象的索引值。</span><span class="sxs-lookup"><span data-stu-id="3f3b6-113">Index value of the border object to be retrieved.</span></span> <span data-ttu-id="3f3b6-114">有关详细信息，请参阅 ConditionalRangeBorderIndex。</span><span class="sxs-lookup"><span data-stu-id="3f3b6-114">See Excel.ConditionalRangeBorderIndex for details.</span></span>
+          description: 要检索的 border 对象的索引值。 有关详细信息，请参阅 ConditionalRangeBorderIndex。
           type:
             - 'excel!Excel.ConditionalRangeBorderIndex:enum'
   - uid: 'excel!Excel.ConditionalRangeBorderCollection#getItem:member(2)'
     summary: |-
-      <span data-ttu-id="3f3b6-115">使用其名称获取 border 对象</span><span class="sxs-lookup"><span data-stu-id="3f3b6-115">Gets a border object using its name.</span></span>
+      使用其名称获取 border 对象
 
-      <span data-ttu-id="3f3b6-116">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3f3b6-116">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: getItem(indexString)
     fullName: getItem(indexString)
     langs:
@@ -109,14 +109,14 @@ items:
         description: ''
       parameters:
         - id: indexString
-          description: <span data-ttu-id="3f3b6-117">要检索的 border 对象的索引值。</span><span class="sxs-lookup"><span data-stu-id="3f3b6-117">Index value of the border object to be retrieved.</span></span> <span data-ttu-id="3f3b6-118">有关详细信息，请参阅 ConditionalRangeBorderIndex。</span><span class="sxs-lookup"><span data-stu-id="3f3b6-118">See Excel.ConditionalRangeBorderIndex for details.</span></span>
+          description: 要检索的 border 对象的索引值。 有关详细信息，请参阅 ConditionalRangeBorderIndex。
           type:
             - '"EdgeTop" | "EdgeBottom" | "EdgeLeft" | "EdgeRight"'
   - uid: 'excel!Excel.ConditionalRangeBorderCollection#getItemAt:member(1)'
     summary: |-
-      <span data-ttu-id="3f3b6-119">使用其索引获取 border 对象</span><span class="sxs-lookup"><span data-stu-id="3f3b6-119">Gets a border object using its index.</span></span>
+      使用其索引获取 border 对象
 
-      <span data-ttu-id="3f3b6-120">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3f3b6-120">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: getItemAt(index)
     fullName: getItemAt(index)
     langs:
@@ -130,11 +130,11 @@ items:
         description: ''
       parameters:
         - id: index
-          description: <span data-ttu-id="3f3b6-121">要检索的对象的索引值。</span><span class="sxs-lookup"><span data-stu-id="3f3b6-121">Index value of the object to be retrieved.</span></span> <span data-ttu-id="3f3b6-122">从零开始编制索引。</span><span class="sxs-lookup"><span data-stu-id="3f3b6-122">Zero-indexed.</span></span>
+          description: 要检索的对象的索引值。 从零开始编制索引。
           type:
             - number
   - uid: 'excel!Excel.ConditionalRangeBorderCollection#items:member'
-    summary: <span data-ttu-id="3f3b6-123">获取此集合中已加载的子项。</span><span class="sxs-lookup"><span data-stu-id="3f3b6-123">Gets the loaded child items in this collection.</span></span>
+    summary: 获取此集合中已加载的子项。
     name: items
     fullName: items
     langs:
@@ -147,9 +147,9 @@ items:
           - 'excel!Excel.ConditionalRangeBorderCollection#items~0:complex'
   - uid: 'excel!Excel.ConditionalRangeBorderCollection#left:member'
     summary: |-
-      <span data-ttu-id="3f3b6-124">获取左边框。</span><span class="sxs-lookup"><span data-stu-id="3f3b6-124">Gets the left border.</span></span> <span data-ttu-id="3f3b6-125">只读。</span><span class="sxs-lookup"><span data-stu-id="3f3b6-125">Read-only.</span></span>
+      获取左边框。
 
-      <span data-ttu-id="3f3b6-126">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3f3b6-126">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: left
     fullName: left
     langs:
@@ -161,7 +161,7 @@ items:
         type:
           - 'excel!Excel.ConditionalRangeBorder:class'
   - uid: 'excel!Excel.ConditionalRangeBorderCollection#load:member(1)'
-    summary: <span data-ttu-id="3f3b6-127">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="3f3b6-127">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="3f3b6-128">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="3f3b6-128">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(options)
     fullName: load(options)
     langs:
@@ -175,11 +175,11 @@ items:
         description: ''
       parameters:
         - id: options
-          description: <span data-ttu-id="3f3b6-129">提供要加载的对象的属性的选项。</span><span class="sxs-lookup"><span data-stu-id="3f3b6-129">Provides options for which properties of the object to load.</span></span>
+          description: 提供要加载的对象的属性的选项。
           type:
             - 'excel!Excel.ConditionalRangeBorderCollection#load~0:complex'
   - uid: 'excel!Excel.ConditionalRangeBorderCollection#load:member(2)'
-    summary: <span data-ttu-id="3f3b6-130">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="3f3b6-130">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="3f3b6-131">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="3f3b6-131">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -193,11 +193,11 @@ items:
         description: ''
       parameters:
         - id: propertyNames
-          description: <span data-ttu-id="3f3b6-132">一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="3f3b6-132">A comma-delimited string or an array of strings that specify the properties to load.</span></span>
+          description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
           type:
             - 'string | string[]'
   - uid: 'excel!Excel.ConditionalRangeBorderCollection#load:member(3)'
-    summary: <span data-ttu-id="3f3b6-133">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="3f3b6-133">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="3f3b6-134">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="3f3b6-134">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNamesAndPaths)
     fullName: load(propertyNamesAndPaths)
     langs:
@@ -211,14 +211,14 @@ items:
         description: ''
       parameters:
         - id: propertyNamesAndPaths
-          description: '<span data-ttu-id="3f3b6-135">`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="3f3b6-135">`propertyNamesAndPaths.select` is a comma-delimited string that specifies the properties to load, and `propertyNamesAndPaths.expand` is a comma-delimited string that specifies the navigation properties to load.</span></span>'
+          description: '`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。'
           type:
-            - 'excel!OfficeExtension.LoadOption:interface'
+            - 'office!OfficeExtension.LoadOption:interface'
   - uid: 'excel!Excel.ConditionalRangeBorderCollection#right:member'
     summary: |-
-      <span data-ttu-id="3f3b6-136">获取右边框。</span><span class="sxs-lookup"><span data-stu-id="3f3b6-136">Gets the right border.</span></span> <span data-ttu-id="3f3b6-137">只读。</span><span class="sxs-lookup"><span data-stu-id="3f3b6-137">Read-only.</span></span>
+      获取右边框。
 
-      <span data-ttu-id="3f3b6-138">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3f3b6-138">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: right
     fullName: right
     langs:
@@ -230,7 +230,7 @@ items:
         type:
           - 'excel!Excel.ConditionalRangeBorder:class'
   - uid: 'excel!Excel.ConditionalRangeBorderCollection#toJSON:member(1)'
-    summary: '<span data-ttu-id="3f3b6-139">重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`</span><span class="sxs-lookup"><span data-stu-id="3f3b6-139">Overrides the JavaScript `toJSON()` method in order to provide more useful output when an API object is passed to `JSON.stringify()`</span></span><!-- --><span data-ttu-id="3f3b6-140">.</span><span class="sxs-lookup"><span data-stu-id="3f3b6-140"></span></span> <span data-ttu-id="3f3b6-141">(`JSON.stringify`</span><span class="sxs-lookup"><span data-stu-id="3f3b6-141"></span></span><!-- --><span data-ttu-id="3f3b6-142">反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始`Excel.ConditionalRangeBorderCollection`对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.ConditionalRangeBorderCollectionData`</span><span class="sxs-lookup"><span data-stu-id="3f3b6-142">, in turn, calls the `toJSON` method of the object that is passed to it.) Whereas the original `Excel.ConditionalRangeBorderCollection` object is an API object, the `toJSON` method returns a plain JavaScript object (typed as `Excel.Interfaces.ConditionalRangeBorderCollectionData`</span></span><!-- --><span data-ttu-id="3f3b6-143">），其中包含集合的项中所有加载属性的浅表副本的 "items" 数组。</span><span class="sxs-lookup"><span data-stu-id="3f3b6-143">) that contains an "items" array with shallow copies of any loaded properties from the collection''s items.</span></span>'
+    summary: 重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始`Excel.ConditionalRangeBorderCollection`对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.ConditionalRangeBorderCollectionData`<!-- -->），其中包含集合的项中所有加载属性的浅表副本的 "items" 数组。
     name: toJSON()
     fullName: toJSON()
     langs:
@@ -244,9 +244,9 @@ items:
         description: ''
   - uid: 'excel!Excel.ConditionalRangeBorderCollection#top:member'
     summary: |-
-      <span data-ttu-id="3f3b6-144">获取上边框。</span><span class="sxs-lookup"><span data-stu-id="3f3b6-144">Gets the top border.</span></span> <span data-ttu-id="3f3b6-145">只读。</span><span class="sxs-lookup"><span data-stu-id="3f3b6-145">Read-only.</span></span>
+      获取上边框。
 
-      <span data-ttu-id="3f3b6-146">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3f3b6-146">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: top
     fullName: top
     langs:
@@ -258,7 +258,7 @@ items:
         type:
           - 'excel!Excel.ConditionalRangeBorder:class'
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.ConditionalRangeBorder:class'
     name: Excel.ConditionalRangeBorder
@@ -289,7 +289,7 @@ references:
       - uid: 'excel!Excel.Interfaces.CollectionLoadOptions:interface'
         name: Excel.Interfaces.CollectionLoadOptions
         fullName: Excel.Interfaces.CollectionLoadOptions
-  - uid: 'excel!OfficeExtension.LoadOption:interface'
+  - uid: 'office!OfficeExtension.LoadOption:interface'
     name: OfficeExtension.LoadOption
   - uid: 'excel!Excel.Interfaces.ConditionalRangeBorderCollectionData:interface'
     name: Excel.Interfaces.ConditionalRangeBorderCollectionData
