--- a/docs/docs-ref-autogen/excel_1_8/excel/excel.custompropertycollection.yml
+++ b/docs/docs-ref-autogen/excel_1_8/excel/excel.custompropertycollection.yml
@@ -2,16 +2,16 @@
 items:
   - uid: 'excel!Excel.CustomPropertyCollection:class'
     summary: |-
-      <span data-ttu-id="a211b-101">包含 customProperty 对象的集合。</span><span class="sxs-lookup"><span data-stu-id="a211b-101">Contains the collection of customProperty objects.</span></span>
+      包含 customProperty 对象的集合。
 
-      <span data-ttu-id="a211b-102">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a211b-102">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.CustomPropertyCollection
     fullName: Excel.CustomPropertyCollection
     langs:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.CustomPropertyCollection#add:member(1)'
@@ -27,9 +27,9 @@ items:
       - 'excel!Excel.CustomPropertyCollection#toJSON:member(1)'
   - uid: 'excel!Excel.CustomPropertyCollection#add:member(1)'
     summary: |-
-      <span data-ttu-id="a211b-103">新建自定义属性或设置现有自定义属性。</span><span class="sxs-lookup"><span data-stu-id="a211b-103">Creates a new or sets an existing custom property.</span></span>
+      新建自定义属性或设置现有自定义属性。
 
-      <span data-ttu-id="a211b-104">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a211b-104">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: 'add(key, value)'
     fullName: 'add(key, value)'
     langs:
@@ -43,15 +43,15 @@ items:
         description: ''
       parameters:
         - id: key
-          description: '<span data-ttu-id="a211b-105">必需。</span><span class="sxs-lookup"><span data-stu-id="a211b-105">Required.</span></span> <span data-ttu-id="a211b-106">自定义属性的键，它不区分大小写。</span><span class="sxs-lookup"><span data-stu-id="a211b-106">The custom property''s key, which is case-insensitive.</span></span>'
+          description: 必需。 自定义属性的键，它不区分大小写。
           type:
             - string
         - id: value
-          description: <span data-ttu-id="a211b-107">必需。</span><span class="sxs-lookup"><span data-stu-id="a211b-107">Required.</span></span> <span data-ttu-id="a211b-108">自定义属性的值。</span><span class="sxs-lookup"><span data-stu-id="a211b-108">The custom property's value.</span></span>
+          description: 必需。 自定义属性的值。
           type:
             - any
   - uid: 'excel!Excel.CustomPropertyCollection#context:member'
-    summary: <span data-ttu-id="a211b-109">与该对象关联的请求上下文。</span><span class="sxs-lookup"><span data-stu-id="a211b-109">The request context associated with the object.</span></span> <span data-ttu-id="a211b-110">这会将加载项的进程连接到 Office 主机应用程序的进程。</span><span class="sxs-lookup"><span data-stu-id="a211b-110">This connects the add-in's process to the Office host application's process.</span></span>
+    summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
     name: context
     fullName: context
     langs:
@@ -64,9 +64,9 @@ items:
           - 'excel!Excel.RequestContext:class'
   - uid: 'excel!Excel.CustomPropertyCollection#deleteAll:member(1)'
     summary: |-
-      <span data-ttu-id="a211b-111">删除此集合中的所有自定义属性。</span><span class="sxs-lookup"><span data-stu-id="a211b-111">Deletes all custom properties in this collection.</span></span>
+      删除此集合中的所有自定义属性。
 
-      <span data-ttu-id="a211b-112">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a211b-112">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: deleteAll()
     fullName: deleteAll()
     langs:
@@ -80,9 +80,9 @@ items:
         description: ''
   - uid: 'excel!Excel.CustomPropertyCollection#getCount:member(1)'
     summary: |-
-      <span data-ttu-id="a211b-113">获取自定义属性的计数。</span><span class="sxs-lookup"><span data-stu-id="a211b-113">Gets the count of custom properties.</span></span>
+      获取自定义属性的计数。
 
-      <span data-ttu-id="a211b-114">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a211b-114">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: getCount()
     fullName: getCount()
     langs:
@@ -96,9 +96,9 @@ items:
         description: ''
   - uid: 'excel!Excel.CustomPropertyCollection#getItem:member(1)'
     summary: |-
-      <span data-ttu-id="a211b-115">按键获取自定义属性对象（不区分大小写）。</span><span class="sxs-lookup"><span data-stu-id="a211b-115">Gets a custom property object by its key, which is case-insensitive.</span></span> <span data-ttu-id="a211b-116">如果自定义属性不存在，则引发此异常。</span><span class="sxs-lookup"><span data-stu-id="a211b-116">Throws if the custom property does not exist.</span></span>
+      按键获取自定义属性对象（不区分大小写）。 如果自定义属性不存在，则引发此异常。
 
-      <span data-ttu-id="a211b-117">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a211b-117">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: getItem(key)
     fullName: getItem(key)
     langs:
@@ -112,14 +112,14 @@ items:
         description: ''
       parameters:
         - id: key
-          description: <span data-ttu-id="a211b-118">标识自定义属性对象的键。</span><span class="sxs-lookup"><span data-stu-id="a211b-118">The key that identifies the custom property object.</span></span>
+          description: 标识自定义属性对象的键。
           type:
             - string
   - uid: 'excel!Excel.CustomPropertyCollection#getItemOrNullObject:member(1)'
     summary: |-
-      <span data-ttu-id="a211b-119">按键获取自定义属性对象（不区分大小写）。</span><span class="sxs-lookup"><span data-stu-id="a211b-119">Gets a custom property object by its key, which is case-insensitive.</span></span> <span data-ttu-id="a211b-120">如果自定义属性不存在，则返回 null 对象。</span><span class="sxs-lookup"><span data-stu-id="a211b-120">Returns a null object if the custom property does not exist.</span></span>
+      按键获取自定义属性对象（不区分大小写）。 如果自定义属性不存在，则返回 null 对象。
 
-      <span data-ttu-id="a211b-121">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a211b-121">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: getItemOrNullObject(key)
     fullName: getItemOrNullObject(key)
     langs:
@@ -133,11 +133,11 @@ items:
         description: ''
       parameters:
         - id: key
-          description: <span data-ttu-id="a211b-122">必需。</span><span class="sxs-lookup"><span data-stu-id="a211b-122">Required.</span></span> <span data-ttu-id="a211b-123">标识自定义属性对象的键。</span><span class="sxs-lookup"><span data-stu-id="a211b-123">The key that identifies the custom property object.</span></span>
+          description: 必需。 标识自定义属性对象的键。
           type:
             - string
   - uid: 'excel!Excel.CustomPropertyCollection#items:member'
-    summary: <span data-ttu-id="a211b-124">获取此集合中已加载的子项。</span><span class="sxs-lookup"><span data-stu-id="a211b-124">Gets the loaded child items in this collection.</span></span>
+    summary: 获取此集合中已加载的子项。
     name: items
     fullName: items
     langs:
@@ -149,7 +149,7 @@ items:
         type:
           - 'excel!Excel.CustomPropertyCollection#items~0:complex'
   - uid: 'excel!Excel.CustomPropertyCollection#load:member(1)'
-    summary: <span data-ttu-id="a211b-125">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="a211b-125">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="a211b-126">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="a211b-126">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(options)
     fullName: load(options)
     langs:
@@ -163,11 +163,11 @@ items:
         description: ''
       parameters:
         - id: options
-          description: <span data-ttu-id="a211b-127">提供要加载的对象的属性的选项。</span><span class="sxs-lookup"><span data-stu-id="a211b-127">Provides options for which properties of the object to load.</span></span>
+          description: 提供要加载的对象的属性的选项。
           type:
             - 'excel!Excel.CustomPropertyCollection#load~0:complex'
   - uid: 'excel!Excel.CustomPropertyCollection#load:member(2)'
-    summary: <span data-ttu-id="a211b-128">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="a211b-128">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="a211b-129">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="a211b-129">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -181,11 +181,11 @@ items:
         description: ''
       parameters:
         - id: propertyNames
-          description: <span data-ttu-id="a211b-130">一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="a211b-130">A comma-delimited string or an array of strings that specify the properties to load.</span></span>
+          description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
           type:
             - 'string | string[]'
   - uid: 'excel!Excel.CustomPropertyCollection#load:member(3)'
-    summary: <span data-ttu-id="a211b-131">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="a211b-131">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="a211b-132">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="a211b-132">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNamesAndPaths)
     fullName: load(propertyNamesAndPaths)
     langs:
@@ -199,11 +199,11 @@ items:
         description: ''
       parameters:
         - id: propertyNamesAndPaths
-          description: '<span data-ttu-id="a211b-133">`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="a211b-133">`propertyNamesAndPaths.select` is a comma-delimited string that specifies the properties to load, and `propertyNamesAndPaths.expand` is a comma-delimited string that specifies the navigation properties to load.</span></span>'
+          description: '`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。'
           type:
-            - 'excel!OfficeExtension.LoadOption:interface'
+            - 'office!OfficeExtension.LoadOption:interface'
   - uid: 'excel!Excel.CustomPropertyCollection#toJSON:member(1)'
-    summary: '<span data-ttu-id="a211b-134">重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`</span><span class="sxs-lookup"><span data-stu-id="a211b-134">Overrides the JavaScript `toJSON()` method in order to provide more useful output when an API object is passed to `JSON.stringify()`</span></span><!-- --><span data-ttu-id="a211b-135">.</span><span class="sxs-lookup"><span data-stu-id="a211b-135"></span></span> <span data-ttu-id="a211b-136">(`JSON.stringify`</span><span class="sxs-lookup"><span data-stu-id="a211b-136"></span></span><!-- --><span data-ttu-id="a211b-137">反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始`Excel.CustomPropertyCollection`对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.CustomPropertyCollectionData`</span><span class="sxs-lookup"><span data-stu-id="a211b-137">, in turn, calls the `toJSON` method of the object that is passed to it.) Whereas the original `Excel.CustomPropertyCollection` object is an API object, the `toJSON` method returns a plain JavaScript object (typed as `Excel.Interfaces.CustomPropertyCollectionData`</span></span><!-- --><span data-ttu-id="a211b-138">），其中包含集合的项中所有加载属性的浅表副本的 "items" 数组。</span><span class="sxs-lookup"><span data-stu-id="a211b-138">) that contains an "items" array with shallow copies of any loaded properties from the collection''s items.</span></span>'
+    summary: 重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始`Excel.CustomPropertyCollection`对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.CustomPropertyCollectionData`<!-- -->），其中包含集合的项中所有加载属性的浅表副本的 "items" 数组。
     name: toJSON()
     fullName: toJSON()
     langs:
@@ -216,7 +216,7 @@ items:
           - 'excel!Excel.Interfaces.CustomPropertyCollectionData:interface'
         description: ''
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.CustomProperty:class'
     name: Excel.CustomProperty
@@ -226,7 +226,7 @@ references:
     name: OfficeExtension.ClientResult<number>
     fullName: OfficeExtension.ClientResult<number>
     spec.typeScript:
-      - uid: 'excel!OfficeExtension.ClientResult:class'
+      - uid: 'office!OfficeExtension.ClientResult:class'
         name: OfficeExtension.ClientResult
         fullName: OfficeExtension.ClientResult
       - name: <number>
@@ -254,7 +254,7 @@ references:
       - uid: 'excel!Excel.Interfaces.CollectionLoadOptions:interface'
         name: Excel.Interfaces.CollectionLoadOptions
         fullName: Excel.Interfaces.CollectionLoadOptions
-  - uid: 'excel!OfficeExtension.LoadOption:interface'
+  - uid: 'office!OfficeExtension.LoadOption:interface'
     name: OfficeExtension.LoadOption
   - uid: 'excel!Excel.Interfaces.CustomPropertyCollectionData:interface'
     name: Excel.Interfaces.CustomPropertyCollectionData
