--- a/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.settingdata.yml
+++ b/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.settingdata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.SettingData:interface'
-    summary: <span data-ttu-id="06ca8-101">描述通过调用返回的数据的接口`setting.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="06ca8-101">An interface describing the data returned by calling `setting.toJSON()`</span></span><!-- --><span data-ttu-id="06ca8-102">.</span><span class="sxs-lookup"><span data-stu-id="06ca8-102"></span></span>
+    summary: 描述通过调用返回的数据的接口`setting.toJSON()`<!-- -->.
     name: Excel.Interfaces.SettingData
     fullName: Excel.Interfaces.SettingData
     langs:
@@ -13,9 +13,9 @@ items:
       - 'excel!Excel.Interfaces.SettingData#value:member'
   - uid: 'excel!Excel.Interfaces.SettingData#key:member'
     summary: |-
-      <span data-ttu-id="06ca8-103">返回表示 setting 对象的 ID 的键。</span><span class="sxs-lookup"><span data-stu-id="06ca8-103">Returns the key that represents the id of the Setting.</span></span> <span data-ttu-id="06ca8-104">只读。</span><span class="sxs-lookup"><span data-stu-id="06ca8-104">Read-only.</span></span>
+      表示设置的 id 的键。
 
-      <span data-ttu-id="06ca8-105">\[[API 集： ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="06ca8-105">\[ [API set: ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: key
     fullName: key
     langs:
@@ -28,9 +28,9 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.SettingData#value:member'
     summary: |-
-      <span data-ttu-id="06ca8-106">表示为此设置存储的值。</span><span class="sxs-lookup"><span data-stu-id="06ca8-106">Represents the value stored for this setting.</span></span>
+      表示为此设置存储的值。
 
-      <span data-ttu-id="06ca8-107">\[[API 集： ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="06ca8-107">\[ [API set: ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: value
     fullName: value
     langs:
