--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.rangecollection.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.rangecollection.yml
@@ -1,14 +1,14 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.RangeCollection:class'
-    summary: '<span data-ttu-id="8fd78-101">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8fd78-101">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>'
+    summary: '\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]'
     name: Excel.RangeCollection
     fullName: Excel.RangeCollection
     langs:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.RangeCollection#context:member'
@@ -20,7 +20,7 @@ items:
       - 'excel!Excel.RangeCollection#load:member(3)'
       - 'excel!Excel.RangeCollection#toJSON:member(1)'
   - uid: 'excel!Excel.RangeCollection#context:member'
-    summary: <span data-ttu-id="8fd78-102">与该对象关联的请求上下文。</span><span class="sxs-lookup"><span data-stu-id="8fd78-102">The request context associated with the object.</span></span> <span data-ttu-id="8fd78-103">这会将加载项的进程连接到 Office 主机应用程序的进程。</span><span class="sxs-lookup"><span data-stu-id="8fd78-103">This connects the add-in's process to the Office host application's process.</span></span>
+    summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
     name: context
     fullName: context
     langs:
@@ -33,9 +33,9 @@ items:
           - 'excel!Excel.RequestContext:class'
   - uid: 'excel!Excel.RangeCollection#getCount:member(1)'
     summary: |-
-      <span data-ttu-id="8fd78-104">返回 RangeCollection 中的区域数量。</span><span class="sxs-lookup"><span data-stu-id="8fd78-104">Returns the number of ranges in the RangeCollection.</span></span>
+      返回 RangeCollection 中的区域数量。
 
-      <span data-ttu-id="8fd78-105">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8fd78-105">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: getCount()
     fullName: getCount()
     langs:
@@ -49,9 +49,9 @@ items:
         description: ''
   - uid: 'excel!Excel.RangeCollection#getItemAt:member(1)'
     summary: |-
-      <span data-ttu-id="8fd78-106">根据其在 RangeCollection 中的位置返回 Range 对象。</span><span class="sxs-lookup"><span data-stu-id="8fd78-106">Returns the range object based on its position in the RangeCollection.</span></span>
+      根据其在 RangeCollection 中的位置返回 Range 对象。
 
-      <span data-ttu-id="8fd78-107">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8fd78-107">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: getItemAt(index)
     fullName: getItemAt(index)
     langs:
@@ -65,11 +65,11 @@ items:
         description: ''
       parameters:
         - id: index
-          description: <span data-ttu-id="8fd78-108">要检索的 range 对象的索引值。</span><span class="sxs-lookup"><span data-stu-id="8fd78-108">Index value of the range object to be retrieved.</span></span> <span data-ttu-id="8fd78-109">从零开始编制索引。</span><span class="sxs-lookup"><span data-stu-id="8fd78-109">Zero-indexed.</span></span>
+          description: 要检索的 range 对象的索引值。 从零开始编制索引。
           type:
             - number
   - uid: 'excel!Excel.RangeCollection#items:member'
-    summary: <span data-ttu-id="8fd78-110">获取此集合中已加载的子项。</span><span class="sxs-lookup"><span data-stu-id="8fd78-110">Gets the loaded child items in this collection.</span></span>
+    summary: 获取此集合中已加载的子项。
     name: items
     fullName: items
     langs:
@@ -81,7 +81,7 @@ items:
         type:
           - 'excel!Excel.RangeCollection#items~0:complex'
   - uid: 'excel!Excel.RangeCollection#load:member(1)'
-    summary: <span data-ttu-id="8fd78-111">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="8fd78-111">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="8fd78-112">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="8fd78-112">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(options)
     fullName: load(options)
     langs:
@@ -95,11 +95,11 @@ items:
         description: ''
       parameters:
         - id: options
-          description: <span data-ttu-id="8fd78-113">提供要加载的对象的属性的选项。</span><span class="sxs-lookup"><span data-stu-id="8fd78-113">Provides options for which properties of the object to load.</span></span>
+          description: 提供要加载的对象的属性的选项。
           type:
             - 'excel!Excel.RangeCollection#load~0:complex'
   - uid: 'excel!Excel.RangeCollection#load:member(2)'
-    summary: <span data-ttu-id="8fd78-114">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="8fd78-114">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="8fd78-115">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="8fd78-115">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -113,11 +113,11 @@ items:
         description: ''
       parameters:
         - id: propertyNames
-          description: <span data-ttu-id="8fd78-116">一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="8fd78-116">A comma-delimited string or an array of strings that specify the properties to load.</span></span>
+          description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
           type:
             - 'string | string[]'
   - uid: 'excel!Excel.RangeCollection#load:member(3)'
-    summary: <span data-ttu-id="8fd78-117">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="8fd78-117">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="8fd78-118">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="8fd78-118">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNamesAndPaths)
     fullName: load(propertyNamesAndPaths)
     langs:
@@ -131,11 +131,11 @@ items:
         description: ''
       parameters:
         - id: propertyNamesAndPaths
-          description: '<span data-ttu-id="8fd78-119">`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="8fd78-119">`propertyNamesAndPaths.select` is a comma-delimited string that specifies the properties to load, and `propertyNamesAndPaths.expand` is a comma-delimited string that specifies the navigation properties to load.</span></span>'
+          description: '`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。'
           type:
-            - 'excel!OfficeExtension.LoadOption:interface'
+            - 'office!OfficeExtension.LoadOption:interface'
   - uid: 'excel!Excel.RangeCollection#toJSON:member(1)'
-    summary: '<span data-ttu-id="8fd78-120">重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`</span><span class="sxs-lookup"><span data-stu-id="8fd78-120">Overrides the JavaScript `toJSON()` method in order to provide more useful output when an API object is passed to `JSON.stringify()`</span></span><!-- --><span data-ttu-id="8fd78-121">.</span><span class="sxs-lookup"><span data-stu-id="8fd78-121"></span></span> <span data-ttu-id="8fd78-122">(`JSON.stringify`</span><span class="sxs-lookup"><span data-stu-id="8fd78-122"></span></span><!-- --><span data-ttu-id="8fd78-123">反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始`Excel.RangeCollection`对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.RangeCollectionData`</span><span class="sxs-lookup"><span data-stu-id="8fd78-123">, in turn, calls the `toJSON` method of the object that is passed to it.) Whereas the original `Excel.RangeCollection` object is an API object, the `toJSON` method returns a plain JavaScript object (typed as `Excel.Interfaces.RangeCollectionData`</span></span><!-- --><span data-ttu-id="8fd78-124">），其中包含集合的项中所有加载属性的浅表副本的 "items" 数组。</span><span class="sxs-lookup"><span data-stu-id="8fd78-124">) that contains an "items" array with shallow copies of any loaded properties from the collection''s items.</span></span>'
+    summary: 重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始`Excel.RangeCollection`对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.RangeCollectionData`<!-- -->），其中包含集合的项中所有加载属性的浅表副本的 "items" 数组。
     name: toJSON()
     fullName: toJSON()
     langs:
@@ -148,7 +148,7 @@ items:
           - 'excel!Excel.Interfaces.RangeCollectionData:interface'
         description: ''
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.RequestContext:class'
     name: RequestContext
@@ -156,7 +156,7 @@ references:
     name: OfficeExtension.ClientResult<number>
     fullName: OfficeExtension.ClientResult<number>
     spec.typeScript:
-      - uid: 'excel!OfficeExtension.ClientResult:class'
+      - uid: 'office!OfficeExtension.ClientResult:class'
         name: OfficeExtension.ClientResult
         fullName: OfficeExtension.ClientResult
       - name: <number>
@@ -186,7 +186,7 @@ references:
       - uid: 'excel!Excel.Interfaces.CollectionLoadOptions:interface'
         name: Excel.Interfaces.CollectionLoadOptions
         fullName: Excel.Interfaces.CollectionLoadOptions
-  - uid: 'excel!OfficeExtension.LoadOption:interface'
+  - uid: 'office!OfficeExtension.LoadOption:interface'
     name: OfficeExtension.LoadOption
   - uid: 'excel!Excel.Interfaces.RangeCollectionData:interface'
     name: Excel.Interfaces.RangeCollectionData
